...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinnerFacility"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown"
            android:dropDownWidth="match_parent"
...
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/layout_border"
        android:id="@+id/facility1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_layout">

        <TextView
            android:id="@+id/titleTextView_facility1"
            android:layout_width="200dp"
            android:layout_height="22dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_color"
            android:text="Title"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"

        android:background="@drawable/layout_border"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"

        android:background="@drawable/layout_border"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/layout_border"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
...
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/layout_border"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facility4">
        <TextView
            android:id="@+id/titleTextView_facility5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="Title"
            android:textColor="@color/text_color"
...
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_close_or_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_baseline_refresh_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_up_facility" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_down_facility" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_show_mnu" />

...
