...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/facilityTitle"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:textColor="@color/facility_primary_text_color"
                android:textSize="28dp" />

            <androidx.appcompat.widget.AppCompatButton
...
